syntax = "proto3";
option java_package = "com.wind.im.proto";
option java_outer_classname = "SocketBroadcastProto";
//服务端广播通知
message SocketBroadcast {


    uint32 Type=1;//类型
    //SocketBroadcastType Type = 1; //通知类型
    bytes Body = 2; //通知内容 JSON格式，根据类型确定
}